--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css"> 
     <body>
       <h2>Hello,This is Anisha</h2><br>
       <h3>Welcome to this page</h3>
